; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_lps_fdisc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_lps_fdisc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_lps_s = type { i32, i32, i8*, i8*, i32, i64, i8* }

@BFA_TRUE = common dso_local global i32 0, align 4
@BFA_FALSE = common dso_local global i32 0, align 4
@BFA_LPS_SM_LOGIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bfa_lps_fdisc(%struct.bfa_lps_s* %0, i8* %1, i32 %2, i8* %3, i8* %4) #0 {
  %6 = alloca %struct.bfa_lps_s*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.bfa_lps_s* %0, %struct.bfa_lps_s** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %13 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %12, i32 0, i32 6
  store i8* %11, i8** %13, align 8
  %14 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %15 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %14, i32 0, i32 5
  store i64 0, i64* %15, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %18 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %17, i32 0, i32 4
  store i32 %16, i32* %18, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %21 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %20, i32 0, i32 3
  store i8* %19, i8** %21, align 8
  %22 = load i8*, i8** %10, align 8
  %23 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %24 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %23, i32 0, i32 2
  store i8* %22, i8** %24, align 8
  %25 = load i32, i32* @BFA_TRUE, align 4
  %26 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %27 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load i32, i32* @BFA_FALSE, align 4
  %29 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %30 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 8
  %31 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %6, align 8
  %32 = load i32, i32* @BFA_LPS_SM_LOGIN, align 4
  %33 = call i32 @bfa_sm_send_event(%struct.bfa_lps_s* %31, i32 %32)
  ret void
}

declare dso_local i32 @bfa_sm_send_event(%struct.bfa_lps_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
